--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-pdf": "^4.1.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
